turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:19: error: not found: value setCouleurSol
	setCouleurSol(Color.black);
        ^LangtonsAnt:23: error: not found: value setCouleurSol
	setCouleurSol(Color.white);
        ^